css/style.css
html{
  -ms-text-size-adjust:100%;
  -webkit-text-size-adjust:100%;
  font-family:sans-serif;
}
body{
  margin:0;
}
article,
aside,
details,
figcaption,
figure,
footer,
header,
hgroup,
main,
menu,
nav,
section,
summary{
  display:block;
}
audio,
canvas,
progress,
video{
  display:inline-block;
  vertical-align:baseline;
}
audio:not([controls]){
  display:none;
  height:0;
}
[hidden],
template{
  display:none;
}
a{
  background-color:transparent;
}
a:active,
a:hover{
  outline:0;
}
abbr[title]{
  border-bottom:1px dotted;
}
b,
strong{
  font-weight:bold;
}
dfn{
  font-style:italic;
}
h1{
  margin:0.67em 0;
  font-size:2em;
}
mark{
  background:#ff0;
  color:#000;
}
small{
  font-size:80%;
}
sub,
sup{
  position:relative;
  font-size:75%;
  line-height:0;
  vertical-align:baseline;
}

sup{
  top:-0.5em;
}

sub{
  bottom:-0.25em;
}
img{
  border:0;
}
svg:not(:root){
  overflow:hidden;
}
figure{
  margin:1em 40px;
}
hr{
  box-sizing:content-box;
  height:0;
}
pre{
  overflow:auto;
}
code,
kbd,
pre,
samp{
  font-family:monospace, monospace;
  font-size:1em;
}
button,
input,
optgroup,
select,
textarea{
  margin:0;
  color:inherit;
  font:inherit;
}
button{
  overflow:visible;
}
button,
select{
  text-transform:none;
}
button,
html input[type="button"],
input[type="reset"],
input[type="submit"]{
  -webkit-appearance:button;
  cursor:pointer;
}
button[disabled],
html input[disabled]{
  cursor:default;
}
button::-moz-focus-inner,
input::-moz-focus-inner{
  padding:0;
  border:0;
}
input{
  line-height:normal;
}
input[type="checkbox"],
input[type="radio"]{
  box-sizing:border-box;
  padding:0;
}
input[type="number"]::-webkit-inner-spin-button,
input[type="number"]::-webkit-outer-spin-button{
  height:auto;
}
input[type="search"]{
  -webkit-appearance:textfield;
  box-sizing:content-box;
}
input[type="search"]::-webkit-search-cancel-button,
input[type="search"]::-webkit-search-decoration{
  -webkit-appearance:none;
}
fieldset{
  margin:0 2px;
  padding:0.35em 0.625em 0.75em;
  border:1px solid #c0c0c0;
}
legend{
  padding:0;
  border:0;
}
textarea{
  overflow:auto;
}
optgroup{
  font-weight:bold;
}
table{
  border-collapse:collapse;
  border-spacing:0;
}

td,
th{
  padding:0;
}

body{
  position:relative;
  color:white;
}

.headline--first{
  background-color:#D85336;
  z-index:11;
}

.info--first{
  background-color:#2FBFBC;
}

.headline--second{
  background-color:#F2CA3C;
  z-index:22;
}

.info--second{
  background-color:#303F9F;
}

.headline--third{
  background-color:#75AD2B;
  z-index:33;
}

.info--third{
  background-color:#0A2828;
}

[class*="--always-sticky"], [class*="--sticky"]{
  position:fixed !important;
  top:0;
  width:100%;
}

.headline{
  position:relative;
  line-height:80px;
  text-align:center;
}

.headline__text{
  margin:0;
}

.info__description{
  max-width:700px;
  margin:0 auto;
  padding:20px 15px;
}

.info__description:before{
  content:' ';
}

.info__text{
  font-size:20px;
  line-height:24px;
}

.info__text--important{
  color:#000;
}

.github{
  position:absolute;
  bottom:0;
  width:100%;
  height:80px;
  margin-bottom:-80px;
  background-color:orange;
}

.github__link{
  -webkit-transform:translateY(-50%);
  display:block;
  position:relative;
  top:50%;
          transform:translateY(-50%);
  text-align:center;
}

.github__img{
  height:40px;
}

